--- a/templates/pixelegg/app.css
+++ b/templates/pixelegg/app.css
@@ -31,10 +31,10 @@ div#egw_fw_sidebar_r {
 #egw_fw_sidebar_r tr.row td {
   position: relative;
 }
-#egw_fw_sidebar_r tr.row td .et2_hbox.et2_box_widget.avatar {
+#egw_fw_sidebar_r tr.row td et2-hbox.avatar {
   margin: 2px;
 }
-tr span.stat0 {
+tr .stat0 {
   width: 14px;
   height: 14px;
   position: absolute;
@@ -44,7 +44,7 @@ tr span.stat0 {
   background-size: 13px;
   background-repeat: no-repeat;
 }
-tr span.stat1 {
+tr .stat1 {
   width: 14px;
   height: 14px;
   position: absolute;
@@ -60,7 +60,7 @@ tr span.stat1 {
   font-size: 10px;
   line-height: 14px;
 }
-tr span.stat2 {
+tr .stat2 {
   width: 14px;
   height: 14px;
   position: absolute;
@@ -71,7 +71,7 @@ tr span.stat2 {
   background-size: 13px;
   background-repeat: no-repeat;
 }
-tr span.stat3 {
+tr .stat3 {
   width: 14px;
   height: 14px;
   position: absolute;
@@ -92,11 +92,11 @@ tr.egw_online {
   background-color: #f0f7ff;
   border-bottom: 4px solid #b4b4b4;
 }
-#status-index_fav img.iphoto.et2_clickable:hover {
+#status-index_fav .iphoto.et2_clickable:hover {
   filter: invert(1);
 }
-#status-index_status-index-list tr.row div.et2_hbox,
-#status-index_status-index-fav tr.row div.et2_hbox {
+#status-index_status-index-list tr.row .et2_hbox,
+#status-index_status-index-fav tr.row .et2_hbox {
   display: inline-block;
 }
 #status-index_status-index-fav tr.row .avatar,
@@ -128,8 +128,10 @@ tr.egw_online {
 #emptyrow {
   display: none;
 }
-#status-index_status-index-fav #status-index_fav td.iphoto img {
-  margin-top: 5px;
+#status-index_fav et2-image.iphoto.et2_clickable img {
+  width: 100%;
+  height: 25px;
+  margin: 5px;
 }
 #status-index_status-index-fav tr.row .online,
 #status-index_status-index-fav tr.row .busy,
@@ -280,6 +282,15 @@ tr span.on-phone:before {
   opacity: 1;
   transform: rotate(80deg);
   background-position: center;
+}
+#status_call,
+#scheduled_call {
+  min-width: 300px;
+  minHeight: 200px;
+}
+#call {
+  min-width: 200px;
+  minHeight: 200px;
 }
 .slideIsUp #egw_fw_sidebar_r {
   top: 45px;
